# stacklog

./: .buildinfo  .travis.yml  AUTHORS.rst  CNAME  CONTRIBUTING.rst  HISTORY.md  LICENSE  Makefile  README.md  authors.html  contributing.html  genindex.html  history.html  index.html  objects.inv  py-modindex.html  pyproject.toml  readme.html  search.html  searchindex.js  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: docs.yml  github-pages.yml  test.yml
_modules/: index.html  stacklog.html  typing.html
_modules/stacklog/: compat.html
_sources/: index.rst.txt
_sources/api/: stacklog.compat.rst.txt  stacklog.rst.txt
api/: stacklog.compat.html  stacklog.html
docs/: Makefile  conf.py  make.bat
stacklog/: __init__.py  _time_formatters.py  _vendored.py  compat.py
tests/: test_stacklog.py
